# CIC

./: .gitignore  README.md  analyzeRepData  bias_dist.py  bias_results.csv  bias_results_p2.csv  bias_results_p3.csv  requirements.txt
CIC/: setup.cfg
CIC/src/CIC/: cem.py  cemSEIS.py  circlePacking.py  defensiveIS.py  mh.py
CIC/src/CIC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
CIC_example_Matlab_code/: AverageStdRange_NumComponents.m  Average_NumComponents.m  CEM.m  Copy_of_EM_Algo.m  DensityImagesForPresentation.m  EM_Algo.m  EM_Algo_fixed_K.m  E_step.m  Ex1_Main.m  Ex1_Main_PythonRep.m  Ex1_Main_Series.m  Ex1_Main_Table1.m  Ex1_Main_bb35.m  Ex1_Main_bb5.m  Ex1_n_exp_powergrid_10_2020-12-7-22-33.mat  Illustrating_CIC_and_density_over_k.m  Illustrating_EM_converged.m  Illustrating_EM_iterations.m  KSmethod.m  M_step.m  Plot_GMM.m  Plot_GMM_contour_with_points.m  PlottingCIC.m  PlottingCIC_v2.m  PlottingDensity.m  RelRatio_Comp.m  gmmdens.m  logdensity.m  negCE.m  power_exp.m
CIC_example_Matlab_code/mcint/: integrand_mcint.m  integrand_mcint_legacy.m  mcint.m
Experiments/: analyzeResults.py  power_grid_exp_p10_unif.py  power_grid_exp_p20_unif.py  power_grid_exp_p42_unif.py  power_grid_exp_p5_unif.py  results_p10_unif.csv  results_p20_unif.csv  results_p2_unif.csv  results_p3_unif.csv  results_p42_unif.csv  results_p4_unif.csv  results_p5_unif.csv
INFORMS 2021 Materials/: bayesian_constrained_regression_2.xcf  pymc3Test.py
Tests/: matlab_test.py  tests.py
Utils/: hdict.py  power_sim_benchmark.py
__MACOSX/: ._cosmic-master
(+111 files in other folders)
