[metadata]
name = CIC
version = 1.0
author = Nick Terry
author_email = pnterry@uw.edu
description = Implementation of the cross-entropy information criterion and related algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nick-terry/CIC
project_urls =
    Bug Tracker = https://github.com/nick-terry/CIC/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
	cvxpy>=1.1.12
	dccp>=1.0.3
	matplotlib>=3.3.1
	numpy>=1.19.2
	pandas>=1.1.2
	scipy>=1.6.3

[options.packages.find]
where = src